src/main/webapp/style.css
/* ... */
.home-footer {
  font-size: 0.9em;
  color: #666;
  margin-top: 1.5em;
  padding-top: 0.5em;
}

.home-footer a {
  color: #666;
}

.home-footer a:hover {
  color: #333;
}

[class*="col-"].header h1, [class*="col-"].header h2, [class*="col-"].header h3 {
  margin-bottom: 0;
}

.columncontainer {
  display: flex;
  column-gap: 60px;
  row-gap: 15px;
  flex-direction: row;
  flex-wrap: wrap;
}

.columnelement {
  width: 45%;
}

html {
  height: 100%;
  text-size-adjust: none;
}

body {
  color: #222;
  font-family: Inter, Verdana, Helvetica, sans-serif;
  font-size: 12pt;
  margin: 0;
  height: 100%;
  min-width: 360px;
}

h1, h2, h3, h4, h5, h6 {
  color: black;
  background-color: inherit;
  clear: both;
  font-family: Martian, monaco, monospace;
  font-weight: bold;
  margin-top: 5mm;
}

h1, h2 {
  margin-bottom: 5mm;
}

h4, h5, h6 {
  font-size: 12pt;
}

h5, h6 {
  font-style: italic;
  margin-bottom: 2mm;
}

p.subtitle {
  margin-bottom: 24px;
  font-family: Martian, monaco, monospace;
  font-style: italic;
  font-size: 10pt;
}

p.center {
  text-align: center;
}

.logo-menu > .logo {
  display: inline-block;
  background-image: url("images/logo-icon.svg");
  background-size: contain;
  background-repeat: no-repeat;
  width: 8mm;
  height: 8mm;
  margin: 2mm 2mm 2mm 0;
  vertical-align: middle;
}

.title .orglogo {
  display: inline-block;
  background-image: url("images/by-kpxl.svg");
  width: 21.72mm;
  height: 6mm;
  vertical-align: middle;
}

.logo-menu {
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.logo-menu .logo {
  cursor: pointer;
}

.logo-dropdown {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: white;
  border: 1px solid #E0E5EB;
  border-radius: 4px;
  box-shadow: 0 2px 8px rgba(0,0,0,0.12);
  z-index: 1000;
  min-width: 140px;
  padding: 4px 0;
  font-family: Martian, monaco, monospace;
  font-size: 14px;
}

.logo-menu:hover .logo-dropdown {
  display: block;
}

.logo-dropdown a {
  display: block;
  padding: 8px 16px;
  color: #1A1F23;
  font-weight: 700;
  white-space: nowrap;
}

.logo-dropdown a:hover {
  background-color: #F3F6F9;
  color: #0b73da;
}

.logo-dropdown a.selected {
  color: #0b73da;
}

section {
  display: block;
  margin: 0 auto;
}

@media screen and (min-width: 576px) {
  section div.container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: var(--gap);
  }
}

section div.container div.column {
  display: block;
  margin-bottom: calc(2 * var(--gap));
}

@media screen and (min-width: 576px) {
  section div.container div.column {
    margin-bottom: 0;
  }
}

li {
  margin-top: 2mm;
}

table {
  width: 100%;
  font-size: inherit;
  margin-bottom: 30px;
}

div.nanopub-pubinfo td {
  padding: 5px;
}

table, th, td {
  border-collapse: collapse;
}

td, th {
  padding: 5px;
  vertical-align: top;
  text-align: left;
}

th {
  border-bottom: 1px solid #888;
}

tbody tr:nth-child(even) {
  background-color: #efefef;
}

table.activitypanel td {
  background: white;
}

table.activitypanel td.low {
  background: #0B73DA40;
}

table.activitypanel td.med {
  background: #0B73DA80;
}

table.activitypanel td.high {
  background: #0B73DAc0;
}

table.paramtable {
  width: unset;
}

table.paramtable td {
  background: white;
}

div.large-table table {
  max-width: 100%;
}

.box {
  background: #F3F6F9;
  padding: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 4px;
}

.box.main a {
  font-weight: bold;
}

.box div.option:not(:last-child) {
  margin-bottom: 15px;
}

ul {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

ul:has(li) + .emptynotice {
  display: none;
}

.hide-if-empty:has(ul:empty) {
  display: none;
}

.hide-if-empty:has(.hide-if-empty-trigger:empty) {
  display: none;
}

.header.hide-if-empty:not(:has(+ .content.hide-if-empty)) {
  display: none;
}

.emptynotice {
  margin-top: 0;
}

ul:not(:has(li)) {
  display: none;
}

ul.box {
  padding: 25px 25px 25px 40px;
}

.box.odd {
  background: white;
}

ul.box li:not(:last-child) {
  margin-bottom: 15px;
}

img {
  vertical-align: middle;
}

img.thirdparty {
  filter: grayscale(1);
}

.nanopub-icon {
  display: inline-block;
  background-image: url("nanopub-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}

.user-icon {
  display: inline-block;
  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.3em;
  width: 1.5em;
  height: 1.5em;
  object-fit: cover;
  background-color: lightgray;
  mask-image: url("images/mask.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  -webkit-mask-image: url("images/mask.svg");
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: contain;
}

.bot-icon {
  display: inline-block;
  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.3em;
  width: 1.5em;
  border: 1px solid lightblue;
  border-radius: 50px;
}

.user-profile-pic {
  display: inline-block;
  vertical-align: middle;
  margin-top: 0;
  margin-right: 0.3em;
  width: 3em;
  height: 3em;
  object-fit: cover;
  background-color: lightgray;
  mask-image: url("images/mask.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  -webkit-mask-image: url("images/mask.svg");
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: contain;
}

.api-icon {
  display: inline-block;
  background-image: url("images/api-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}

.textfield-icon {
  margin-left: 10px;
  margin-top: 2px;
}

ul.users {
  list-style: none;
  padding-left: 20.8px;
}

.users ul {
  list-style: none;
  padding-left: 20.8px;
}

.form-icon {
  display: inline-block;
  background-image: url("images/form-icon.svg");
  vertical-align: top;
  margin-top: 6px;
  width: 12px;
  height: 12px;
}

ul.forms {
  list-style-image: url('images/form-icon.svg');
}

.forms ul {
  list-style-image: url('images/form-icon.svg');
}

li:has(.templateref) {
  list-style-image: url('images/form-icon.svg');
}
/* ... */

